--- a/doc/game/qiangdouren/表现.md
+++ b/doc/game/qiangdouren/表现.md
@@ -1,3 +1,12 @@
 1. 怪物受击 闪白
 2. 角色受击 闪白  震屏
 3. 怪物死亡后 有一个夸张的死亡粒子 粒子带有物理效果  碰到屏幕地面交互
+4. 小怪增加 受击动画  表现为 1. 播放受击特效。 2. 触发动作。 3. 播放受击音效。  动作表现为 膨胀
+5.  船下面的粒子不像水花  需求是船和小怪要在水面上 粒子可以替换成涟漪特效 
+6.  小怪物泛白修复  现在是个方块的形状 要求贴合纹理  
+   
+7. 增加 所有的音效 符合场景风格 游戏风格 比如 打击 设计 爆炸 主界面 战场 死亡 胜利  生成资源后保存到  @audio/         │
+│   里面并且在游戏中使用  
+
+## 飘字
+  伤害打到怪物上有减少的血量文字
