--- a/doc/game/qiangdouren/贴图资源.md
+++ b/doc/game/qiangdouren/贴图资源.md
@@ -15,4 +15,6 @@
 1. 每个Boss都有相应的动画
 
 
-## 子弹使用的贴图
+## 换子弹使用的贴图
+- 有子弹的图标 @texture/qiangdouren/bullet_slot_1.png
+- 空壳 @texture/qiangdouren/bullet_slot_2.png
